--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="image-track" data-mouse-down-at="0">
-        <img class="image" src="images/alekon-pictures-2GmN0Kw3Dlw-unsplash.jpg" alt="" >
-        <img class="image" src="images/brooke-balentine-wkyxzPcsJtU-unsplash.jpg" alt="" >
-        <img class="image" src="images/christian-crocker-44N2duNR1Jw-unsplash.jpg" alt="" >
-        <img class="image" src="images/karsten-winegeart-zzPWV4g_sWw-unsplash.jpg" alt="" >
-        <img class="image" src="images/mauricio-gutierrez-YDavSy862ZQ-unsplash.jpg" alt="" >
-        <img class="image" src="images/tomasz-zagorski-i1VDAvFG4zw-unsplash.jpg" alt="" >
+    <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+        <img class="image" src="images/alekon-pictures-2GmN0Kw3Dlw-unsplash.jpg" alt=""  draggable="false">
+        <img class="image" src="images/brooke-balentine-wkyxzPcsJtU-unsplash.jpg" alt="" draggable="false">
+        <img class="image" src="images/christian-crocker-44N2duNR1Jw-unsplash.jpg" alt=""  draggable="false">
+        <img class="image" src="images/karsten-winegeart-zzPWV4g_sWw-unsplash.jpg" alt=""  draggable="false">
+        <img class="image" src="images/mauricio-gutierrez-YDavSy862ZQ-unsplash.jpg" alt="" draggable="false" >
+        <img class="image" src="images/tomasz-zagorski-i1VDAvFG4zw-unsplash.jpg" alt="" draggable="false" >
     </div>
  
     
